nav bar of admin adjusted

--- a/PreAcademicInfoFront/webapp/src/app/admin/nav-admin/nav-admin.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/admin/nav-admin/nav-admin.component.html
@@ -4,12 +4,11 @@
     <mat-toolbar-row>
     <span style="margin-right: 20px">AcademicInfo</span>
   
-    <button mat-button >Cataloage</button>
     <button mat-button routerLink="../contracte">Contracte studii</button>
     <button mat-button routerLink="../teachers">Profesori</button>
     <button mat-button routerLink="../students">Studenti</button>
-    <button mat-button >Cereri</button>
-    <button mat-button >Taxe</button>
+    <button mat-button routerLink="../news">News</button>
+    
   
     <span class="fill-space"></span>
     <div>
