background change and Note, Formula buttons

--- a/PreAcademicInfoFront/webapp/src/app/teacher/nav-teacher/nav-teacher.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/nav-teacher/nav-teacher.component.html
@@ -4,10 +4,8 @@
   <mat-toolbar-row>
   <span style="margin-right: 20px">AcademicInfo</span>
 
-  <button mat-button [matMenuTriggerFor]="note">Note</button>
-  <mat-menu #note="matMenu">
-    <button mat-menu-item routerLink="../formula">Formula</button>
-  </mat-menu>
+  <button mat-button routerLink="../teacher">Note</button>
+  <button mat-button routerLink="../formula">Formula</button>
 
     <span class="fill-space"></span>
     <div>
