getter for dep,specializari,grupe in news + request de sendmail

--- a/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
   &nbsp;&nbsp;&nbsp;&nbsp;
   <mat-form-field class="select">
-    <mat-select class = "white" placeholder="Specializare">
+    <mat-select class = "white" (selectionChange)="onSpecializareChange($event)" placeholder="Specializare">
       <mat-option *ngFor="let s of specializari" [value]="s.value" >
         {{s.viewValue}}
       </mat-option>
