--- a/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.scss
@@ -31,3 +31,13 @@
     display: table;
     margin: 0 auto;
 }
+
+#wrapper {
+    text-align: center;
+  }
+.atcenter {
+    margin:50px;
+    display: inline-block;
+    width:200px;
+    height: 200px;
+  }
