--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
@@ -15,21 +15,31 @@
   <ng-container matColumnDef="nota">
     <th mat-header-cell *matHeaderCellDef> Nota </th>
     <td mat-cell *matCellDef="let element">
-            <mat-form-field>
+            <mat-form-field *ngIf="element.grades.length > 0">
                 <input matInput placeholder="{{element.grades[0]['value']}}" #input (focusout)="saveGrade($event,element)">
             </mat-form-field>
-            </td>
+            <mat-form-field *ngIf="element.grades.length == 0">
+                <input matInput placeholder="introdu nota" #input (focusout)="saveGrade($event,element)">
+            </mat-form-field>
+      </td>
   </ng-container>
 
 
   <ng-container matColumnDef="data">
       <th mat-header-cell *matHeaderCellDef> Data </th>
       <td mat-cell *matCellDef="let element">
-          <mat-form-field>
+          <mat-form-field *ngIf="element.grades.length > 0">
               <input matInput [matDatepicker]="picker" placeholder="{{element.grades[0]['data']}}" (focusout)="saveDate($event,element)">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
+          <mat-form-field *ngIf="element.grades.length == 0">
+              <input matInput [matDatepicker]="picker" placeholder="introdu data" (focusout)="saveDate($event,element)">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          
+          
         {{element.data}}</td>
     </ng-container>
 
