final grades computed, working

--- a/PreAcademicInfoFront/webapp/src/app/teacher/formula/formula.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/formula/formula.component.html
@@ -108,9 +108,7 @@
       </mat-card>
   </div>
   <br>
-  <button mat-flat-button color="primary" class="button-style" (click)="submit($event)">Submit</button>
-  <div *ngIf = "submitted">
-        <button mat-flat-button color="primary" class="button-style" (click)="noteFinale($event)">Calculeaza note finale</button>
-    </div>
+  <button mat-flat-button color="primary" class="button-style" (click)="submitProcentaje($event)">Submit</button>
+  <button mat-flat-button color="primary" class="button-style" (click)="noteFinale($event)">Calculeaza note finale</button>
   <br>
 </div>
