--- a/PreAcademicInfoFront/webapp/src/app/teacher/formula/formula.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/formula/formula.component.html
@@ -109,6 +109,8 @@
   </div>
   <br>
   <button mat-flat-button color="primary" class="button-style" (click)="submitProcentaje($event)">Submit</button>
+  <div *ngIf="submitted">
   <button mat-flat-button color="primary" class="button-style" (click)="noteFinale($event)">Calculeaza note finale</button>
+  </div>
   <br>
 </div>
