--- a/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
@@ -17,15 +17,23 @@
         <ng-container matColumnDef="value">
           <th mat-header-cell *matHeaderCellDef> Nota </th>
           <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+          <td mat-footer-cell *matFooterCellDef> 
+              prezente laborator:{{prezenteLab}}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="data">
           <th mat-header-cell *matHeaderCellDef> Data notei </th>
           <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+          <td mat-footer-cell *matFooterCellDef> 
+              prezente seminar:{{prezenteSeminar}}
+          </td>
         </ng-container>
-
+       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
+
 
 </div>
