--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-lab-teacher/note-lab-teacher.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-lab-teacher/note-lab-teacher.component.html
@@ -13,7 +13,7 @@
   
     
     <ng-container matColumnDef="prezente">
-      <th mat-header-cell *matHeaderCellDef> Nr Prezente </th>
+      <th mat-header-cell *matHeaderCellDef> Prezente laborator </th>
       <td mat-cell *matCellDef="let element">
               <mat-form-field>
                   <input matInput placeholder="{{element.prezenteLab}}" #input (focusout)="savePresence($event,element)">
@@ -21,6 +21,15 @@
       </td>
     </ng-container>
   
+    <ng-container matColumnDef="prezenteSeminar">
+        <th mat-header-cell *matHeaderCellDef> Prezente seminar </th>
+        <td mat-cell *matCellDef="let element">
+                <mat-form-field>
+                    <input matInput placeholder="{{element.prezenteSeminar}}" #input (focusout)="savePresenceSeminar($event,element)">
+                </mat-form-field>
+        </td>
+      </ng-container>
+    
     <!-- <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
   </table> -->
